@@ -209,6 +209,8 @@ public:
     bool composerTagSupported() const { return tagTypes.contains(QLatin1String("Composer")); }
     bool commentTagSupported() const { return tagTypes.contains(QLatin1String("Comment")); }
     bool performerTagSupported() const { return tagTypes.contains(QLatin1String("Performer")); }
+    bool modifiedFindSupported() const { return ver>=MPD_MAKE_VERSION(0, 19, 0); }
+    bool replaygainSupported() const { return ver>=MPD_MAKE_VERSION(0, 16, 0); }
 
     long version() const { return ver; }
     static bool isPlaylist(const QString &file);
