@@ -56,6 +56,7 @@
     folders and search.
 21. Only remove cached scaled covers if updated via cover dialog.
 22. If auto-splitter hide is disabled, then restore sizes.
+23. ReplayGain settings only valid for MPD v0.16 onwards.
 
 1.4.0
 -----
